Update Remittance Report header to 'Entries'

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
    <!-- Remittance Report -->
           <div class="card">
-            <div class="h">📋 Remittance Report</div>
+            <div class="h">📋 Entries </div>
             <div class="row wrap">
               <input id="remStart" type="date" class="input" placeholder="Start Date"/>
               <input id="remEnd" type="date" class="input" placeholder="End Date"/>
