--- a/product.html
+++ b/product.html
@@ -22,6 +22,12 @@
       <div id="pdSku" class="muted"></div>
     </div>
 
+    <!-- Product Testing Notes -->
+    <div class="section">
+      <h3>📝 Product Testing Notes & Results</h3>
+      <div id="productNotesSection"></div>
+    </div>
+
     <!-- Stock & Ad Spend by Country -->
     <div class="section">
       <h3>Stock &amp; Ad Spend by Country (this product)</h3>
@@ -52,18 +58,18 @@
       </div>
     </div>
 
-    <!-- Product Notes -->
-    <div id="pdNotes" class="section"></div>
-
     <!-- Profit + Advertising Budget -->
     <div class="section">
       <h3>Profit + Advertising Budget (per country) - Auto Calculated</h3>
       <div class="card">
         <div class="table-scroll">
           <table class="table">
-            <thead><tr><th>Country</th><th>Selling Price</th><th>Profit + Ad Budget</th></tr></thead>
+            <thead><tr><th>Country</th><th>Budget Available</th><th>Status</th></tr></thead>
             <tbody id="pdPBBBody"></tbody>
           </table>
+        </div>
+        <div class="muted" style="margin-top: 10px; font-size: 0.9rem;">
+          💡 Budgets are automatically calculated based on selling prices and actual product costs from shipments.
         </div>
       </div>
     </div>
@@ -78,11 +84,10 @@
               <th>ID</th>
               <th>Route</th>
               <th>Qty</th>
+              <th>Purchase Cost</th>
               <th>Ship Cost</th>
-              <th>China Cost</th>
               <th>Departed</th>
               <th>Arrived</th>
-              <th>Note</th>
               <th>Actions</th>
             </tr>
           </thead>
@@ -101,10 +106,8 @@
               <th>Route</th>
               <th>Qty</th>
               <th>Ship Cost</th>
-              <th>China Cost</th>
               <th>Departed</th>
               <th>Arrived</th>
-              <th>Note</th>
               <th>Actions</th>
             </tr>
           </thead>
@@ -123,8 +126,8 @@
               <th>ID</th>
               <th>Route</th>
               <th>Qty</th>
+              <th>Purchase Cost</th>
               <th>Ship Cost</th>
-              <th>China Cost</th>
               <th>Departed</th>
               <th>Arrived</th>
               <th>Days</th>
@@ -153,16 +156,12 @@
                 <th>Country</th>
                 <th>Revenue</th>
                 <th>Ad Spend</th>
-                <th>Cost China</th>
-                <th>Ship China→Kenya</th>
-                <th>Boxleo Fees</th>
+                <th>Product Cost</th>
+                <th>Shipping Cost</th>
+                <th>Boxleo Cost</th>
                 <th>Total Cost</th>
                 <th>Pieces</th>
-                <th>Orders</th>
                 <th>Delivery Rate</th>
-                <th>Cost/Order</th>
-                <th>Cost/Piece (Ad)</th>
-                <th>Cost/Piece (Boxleo)</th>
                 <th>Profit</th>
               </tr>
             </thead>
@@ -172,16 +171,12 @@
                 <th>Totals</th>
                 <th id="pdLPRevT">0</th>
                 <th id="pdLPAdT">0</th>
-                <th id="pdLPCostChinaT">0</th>
-                <th id="pdLPShipChinaT">0</th>
+                <th id="pdLPCostT">0</th>
+                <th id="pdLPShipT">0</th>
                 <th id="pdLPBoxleoT">0</th>
                 <th id="pdLPTotalCostT">0</th>
                 <th id="pdLPPcsT">0</th>
-                <th id="pdLPOrdersT">0</th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
+                <th id="pdLPDeliveryT">0%</th>
                 <th id="pdLPProfitT">0</th>
               </tr>
             </tfoot>
@@ -251,13 +246,10 @@
               <th>Country</th>
               <th>Orders</th>
               <th>Pieces</th>
-              <th>Delivery Rate</th>
               <th>Revenue</th>
               <th>Ad Spend</th>
-              <th>Boxleo Fees</th>
-              <th>Cost/Order</th>
-              <th>Cost/Piece (Ad)</th>
-              <th>Cost/Piece (Boxleo)</th>
+              <th>Boxleo Cost</th>
+              <th>Delivery Rate</th>
               <th>Actions</th>
             </tr>
           </thead>
