--- a/product.html
+++ b/product.html
@@ -22,10 +22,19 @@
       <div id="pdSku" class="muted"></div>
     </div>
 
-    <!-- Product Testing Notes -->
+    <!-- Product Notes Section -->
     <div class="section">
-      <h3>📝 Product Testing Notes & Results</h3>
-      <div id="productNotesSection"></div>
+      <h3>📝 Product Testing Notes by Country</h3>
+      <div class="card">
+        <div class="row wrap">
+          <select id="pdNoteCountry" class="input">
+            <option value="">Select Country</option>
+          </select>
+          <textarea id="pdNoteText" class="input" placeholder="Enter testing results and notes for this country..." style="flex:1; min-height: 80px;"></textarea>
+          <button id="pdNoteSave" class="btn">💾 Save Note</button>
+        </div>
+        <div id="pdNotesList" class="notes-grid" style="margin-top: 15px;"></div>
+      </div>
     </div>
 
     <!-- Stock & Ad Spend by Country -->
@@ -58,18 +67,25 @@
       </div>
     </div>
 
-    <!-- Profit + Advertising Budget -->
+    <!-- Profit + Advertising Budget (Auto-calculated) -->
     <div class="section">
-      <h3>Profit + Advertising Budget (per country) - Auto Calculated</h3>
+      <h3>💰 Profit + Advertising Budget (Auto-calculated)</h3>
       <div class="card">
         <div class="table-scroll">
           <table class="table">
-            <thead><tr><th>Country</th><th>Budget Available</th><th>Status</th></tr></thead>
+            <thead>
+              <tr>
+                <th>Country</th>
+                <th>Selling Price</th>
+                <th>Product Cost</th>
+                <th>Shipping Cost</th>
+                <th>Total Cost</th>
+                <th>Profit + Ad Budget</th>
+                <th>Max Cost Per Lead</th>
+              </tr>
+            </thead>
             <tbody id="pdPBBBody"></tbody>
           </table>
-        </div>
-        <div class="muted" style="margin-top: 10px; font-size: 0.9rem;">
-          💡 Budgets are automatically calculated based on selling prices and actual product costs from shipments.
         </div>
       </div>
     </div>
@@ -84,8 +100,8 @@
               <th>ID</th>
               <th>Route</th>
               <th>Qty</th>
-              <th>Purchase Cost</th>
               <th>Ship Cost</th>
+              <th>Purchase Cost</th>
               <th>Departed</th>
               <th>Arrived</th>
               <th>Actions</th>
@@ -126,8 +142,8 @@
               <th>ID</th>
               <th>Route</th>
               <th>Qty</th>
-              <th>Purchase Cost</th>
               <th>Ship Cost</th>
+              <th>Purchase Cost</th>
               <th>Departed</th>
               <th>Arrived</th>
               <th>Days</th>
@@ -158,8 +174,7 @@
                 <th>Ad Spend</th>
                 <th>Product Cost</th>
                 <th>Shipping Cost</th>
-                <th>Boxleo Cost</th>
-                <th>Total Cost</th>
+                <th>Boxleo Fees</th>
                 <th>Pieces</th>
                 <th>Delivery Rate</th>
                 <th>Profit</th>
@@ -171,12 +186,11 @@
                 <th>Totals</th>
                 <th id="pdLPRevT">0</th>
                 <th id="pdLPAdT">0</th>
-                <th id="pdLPCostT">0</th>
-                <th id="pdLPShipT">0</th>
+                <th id="pdLPProductCostT">0</th>
+                <th id="pdLPShippingCostT">0</th>
                 <th id="pdLPBoxleoT">0</th>
-                <th id="pdLPTotalCostT">0</th>
                 <th id="pdLPPcsT">0</th>
-                <th id="pdLPDeliveryT">0%</th>
+                <th id="pdLPDeliveryRateT">0%</th>
                 <th id="pdLPProfitT">0</th>
               </tr>
             </tfoot>
@@ -248,7 +262,7 @@
               <th>Pieces</th>
               <th>Revenue</th>
               <th>Ad Spend</th>
-              <th>Boxleo Cost</th>
+              <th>Boxleo Fees</th>
               <th>Delivery Rate</th>
               <th>Actions</th>
             </tr>
