--- a/product.html
+++ b/product.html
@@ -24,16 +24,17 @@
 
     <!-- Product Notes Section -->
     <div class="section">
-      <h3>📝 Product Testing Notes by Country</h3>
+      <h3>📝 Product Notes & Testing Results</h3>
       <div class="card">
+        <div class="h">Add Testing Results by Country</div>
         <div class="row wrap">
           <select id="pdNoteCountry" class="input">
-            <option value="">Select Country</option>
+            <option value="">Select country...</option>
           </select>
-          <textarea id="pdNoteText" class="input" placeholder="Enter testing results and notes for this country..." style="flex:1; min-height: 80px;"></textarea>
+          <textarea id="pdNoteText" class="input" placeholder="Enter testing results, observations, or notes for this country..." rows="3" style="width: 100%;"></textarea>
           <button id="pdNoteSave" class="btn">💾 Save Note</button>
         </div>
-        <div id="pdNotesList" class="notes-grid" style="margin-top: 15px;"></div>
+        <div id="pdNotesList" class="notes-list" style="margin-top: 15px;"></div>
       </div>
     </div>
 
@@ -67,10 +68,11 @@
       </div>
     </div>
 
-    <!-- Profit + Advertising Budget (Auto-calculated) -->
+    <!-- Profit + Advertising Budget (Automated) -->
     <div class="section">
-      <h3>💰 Profit + Advertising Budget (Auto-calculated)</h3>
+      <h3>Profit + Advertising Budget (Automated Calculation)</h3>
       <div class="card">
+        <div class="h">💰 Automated Budget Calculation by Country</div>
         <div class="table-scroll">
           <table class="table">
             <thead>
@@ -78,10 +80,9 @@
                 <th>Country</th>
                 <th>Selling Price</th>
                 <th>Product Cost</th>
-                <th>Shipping Cost</th>
-                <th>Total Cost</th>
+                <th>Max CPL</th>
+                <th>Delivery Rate</th>
                 <th>Profit + Ad Budget</th>
-                <th>Max Cost Per Lead</th>
               </tr>
             </thead>
             <tbody id="pdPBBBody"></tbody>
@@ -101,7 +102,7 @@
               <th>Route</th>
               <th>Qty</th>
               <th>Ship Cost</th>
-              <th>Purchase Cost</th>
+              <th>China Cost</th>
               <th>Departed</th>
               <th>Arrived</th>
               <th>Actions</th>
@@ -143,7 +144,7 @@
               <th>Route</th>
               <th>Qty</th>
               <th>Ship Cost</th>
-              <th>Purchase Cost</th>
+              <th>China Cost</th>
               <th>Departed</th>
               <th>Arrived</th>
               <th>Days</th>
@@ -161,8 +162,21 @@
       <h3>Lifetime (This Product)</h3>
       <div class="card">
         <div class="row wrap">
-          <input id="pdLPStart" type="date" class="input"/>
-          <input id="pdLPEnd" type="date" class="input"/>
+          <select id="pdLPRange" class="input date-range-select">
+            <option value="8days">Last 8 days</option>
+            <option value="15days">Last 15 days</option>
+            <option value="1month">Last 1 month</option>
+            <option value="2months">Last 2 months</option>
+            <option value="6months">Last 6 months</option>
+            <option value="1year">Last 1 year</option>
+            <option value="2years">Last 2 years</option>
+            <option value="lifetime">Lifetime</option>
+            <option value="custom">Custom range</option>
+          </select>
+          <div class="custom-range" style="display: none;">
+            <input type="date" class="input custom-start"/>
+            <input type="date" class="input custom-end"/>
+          </div>
           <button id="pdLPRun" class="btn">Run</button>
         </div>
         <div class="table-scroll">
@@ -172,9 +186,10 @@
                 <th>Country</th>
                 <th>Revenue</th>
                 <th>Ad Spend</th>
-                <th>Product Cost</th>
-                <th>Shipping Cost</th>
                 <th>Boxleo Fees</th>
+                <th>Product Cost</th>
+                <th>Shipping</th>
+                <th>Total Cost</th>
                 <th>Pieces</th>
                 <th>Delivery Rate</th>
                 <th>Profit</th>
@@ -186,9 +201,10 @@
                 <th>Totals</th>
                 <th id="pdLPRevT">0</th>
                 <th id="pdLPAdT">0</th>
-                <th id="pdLPProductCostT">0</th>
-                <th id="pdLPShippingCostT">0</th>
                 <th id="pdLPBoxleoT">0</th>
+                <th id="pdLPProductCostT">0</th>
+                <th id="pdLPShipT">0</th>
+                <th id="pdLPTotalCostT">0</th>
                 <th id="pdLPPcsT">0</th>
                 <th id="pdLPDeliveryRateT">0%</th>
                 <th id="pdLPProfitT">0</th>
@@ -224,8 +240,21 @@
 
         <!-- Filter -->
         <div class="row wrap">
-          <input id="pdInfStart" type="date" class="input"/>
-          <input id="pdInfEnd" type="date" class="input"/>
+          <select id="pdInfRange" class="input date-range-select">
+            <option value="8days">Last 8 days</option>
+            <option value="15days">Last 15 days</option>
+            <option value="1month">Last 1 month</option>
+            <option value="2months">Last 2 months</option>
+            <option value="6months">Last 6 months</option>
+            <option value="1year">Last 1 year</option>
+            <option value="2years">Last 2 years</option>
+            <option value="lifetime">Lifetime</option>
+            <option value="custom">Custom range</option>
+          </select>
+          <div class="custom-range" style="display: none;">
+            <input type="date" class="input custom-start"/>
+            <input type="date" class="input custom-end"/>
+          </div>
           <button id="pdInfRun" class="btn outline">Filter</button>
           <div class="badge">Total: <span id="pdInfTotal">0</span> USD</div>
         </div>
@@ -263,7 +292,6 @@
               <th>Revenue</th>
               <th>Ad Spend</th>
               <th>Boxleo Fees</th>
-              <th>Delivery Rate</th>
               <th>Actions</th>
             </tr>
           </thead>
