--- a/product.html
+++ b/product.html
@@ -190,6 +190,7 @@
                 <th>Product Cost</th>
                 <th>Shipping</th>
                 <th>Total Cost</th>
+                <th>Orders</th>
                 <th>Pieces</th>
                 <th>Delivery Rate</th>
                 <th>Profit</th>
@@ -205,6 +206,7 @@
                 <th id="pdLPProductCostT">0</th>
                 <th id="pdLPShipT">0</th>
                 <th id="pdLPTotalCostT">0</th>
+                <th id="pdLPOrdersT">0</th>
                 <th id="pdLPPcsT">0</th>
                 <th id="pdLPDeliveryRateT">0%</th>
                 <th id="pdLPProfitT">0</th>
