--- a/product.html
+++ b/product.html
@@ -80,6 +80,7 @@
                 <th>Country</th>
                 <th>Selling Price</th>
                 <th>Product Cost</th>
+                <th>Shipping Cost</th>
                 <th>Max CPL</th>
                 <th>Delivery Rate</th>
                 <th>Profit + Ad Budget</th>
