--- a/product.html
+++ b/product.html
@@ -79,8 +79,9 @@
               <tr>
                 <th>Country</th>
                 <th>Selling Price</th>
-                <th>Product Cost</th>
+                <th>Product Cost China</th>
                 <th>Shipping Cost</th>
+                <th>Total Product Cost</th>
                 <th>Max CPL</th>
                 <th>Delivery Rate</th>
                 <th>Profit + Ad Budget</th>
@@ -188,7 +189,7 @@
                 <th>Revenue</th>
                 <th>Ad Spend</th>
                 <th>Boxleo Fees</th>
-                <th>Product Cost</th>
+                <th>Product Cost China</th>
                 <th>Shipping</th>
                 <th>Total Cost</th>
                 <th>Orders</th>
