--- a/product.html
+++ b/product.html
@@ -193,7 +193,8 @@
                 <th>Shipping</th>
                 <th>Total Cost</th>
                 <th>Orders</th>
-                <th>Pieces</th>
+                <th>Delivered Orders</th>
+                <th>Delivered Pieces</th>
                 <th>Delivery Rate</th>
                 <th>Profit</th>
               </tr>
@@ -209,7 +210,8 @@
                 <th id="pdLPShipT">0</th>
                 <th id="pdLPTotalCostT">0</th>
                 <th id="pdLPOrdersT">0</th>
-                <th id="pdLPPcsT">0</th>
+                <th id="pdLPDeliveredOrdersT">0</th>
+                <th id="pdLPDeliveredPiecesT">0</th>
                 <th id="pdLPDeliveryRateT">0%</th>
                 <th id="pdLPProfitT">0</th>
               </tr>
