--- a/index.html
+++ b/index.html
@@ -306,7 +306,8 @@
                     <th>Product Name</th>
                     <th>Country</th>
                     <th>Orders</th>
-                    <th>Pieces</th>
+                    <th>Delivered Orders</th>
+                    <th>Delivered Pieces</th>
                     <th>Revenue</th>
                     <th>Advertising Spend</th>
                     <th>Boxleo Fees</th>
@@ -321,7 +322,8 @@
                   <tr class="totals">
                     <th colspan="2">Totals</th>
                     <th id="remAnalyticsOrdersT">0</th>
-                    <th id="remAnalyticsPiecesT">0</th>
+                    <th id="remAnalyticsDeliveredOrdersT">0</th>
+                    <th id="remAnalyticsDeliveredPiecesT">0</th>
                     <th id="remAnalyticsRevenueT">0</th>
                     <th id="remAnalyticsAdSpendT">0</th>
                     <th id="remAnalyticsBoxleoT">0</th>
@@ -363,6 +365,7 @@
                   <tr>
                     <th>Country</th>
                     <th>Orders</th>
+                    <th>Delivered Orders</th>
                     <th>Delivered Pieces</th>
                     <th>Revenue</th>
                     <th>Total Advertising Spend</th>
@@ -378,7 +381,8 @@
                   <tr class="totals">
                     <th>Totals</th>
                     <th id="pcOrdersT">0</th>
-                    <th id="pcPiecesT">0</th>
+                    <th id="pcDeliveredOrdersT">0</th>
+                    <th id="pcDeliveredPiecesT">0</th>
                     <th id="pcRevT">0</th>
                     <th id="pcAdT">0</th>
                     <th id="pcProductCostT">0</th>
